--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Tu transacción se ha completado con éxito.<br>Gracias por tu compra.</p>
 
         <footer>
-            &copy; 2025 Ingeteam. Todos los derechos reservados.
+            &copy; 2025 Ingeteam.
         </footer>
     </div>
 </body>
